# xv6-public

./: .Makefile.swo  .bochsrc  .clang-format  .cmd1.gdb  .cmd2.gdb  .cvsignore  .dir-locals.el  .editorconfig  .gdbinit.tmpl  .gdbinit.tmpl-i386  .gdbinit.tmpl-riscv  .gdbinit.tmpl-x64  .gitignore  .gitreview  .proc.c.swp  .proc.h.swo  .syscall.h.swm  .syscall.h.swn  .syscall.h.swo  .syscall.h.swp  .travis.yml  .user.h.swp  1.txt  142203013.lseek.patch  171.txt  8253pit.c  BUGS  CMakeLists.txt  CopyOnWrite.c  Dockerfile  Dropped Text.txt  FILES  FRRsanity.c  LICENSE  LucidaSans-Typewriter83  MALLOC.h  Makefile  Notes  README  README - A5 - Ezra Lazar and Adam Zielonko  (+686 more)
Lottery Graphs/: grapgs.md  graph.py  pie.py
XV6/: Makefile  README.md  buf.h  cuth  date.h  exec.c  ide.c  kbd.c  ln.c  lottery_test1.c  lottery_test2.c  main.c  null_test1.c  param.h  pr.pl  pro_test3.c  pro_test4.c  proc.c  proc.h  rand.h  runoff  sleep1.p  sleeplock.c  spinlock.c  syscall.c  syscall.h  sysproc.c  thread_test1.c  thread_test2.c  toc.ftr  umalloc.c  user.h  usertests.c  vm.c
attic/: gdbutil  kill.cc  timer.c  wc.c  zombie.c
cmake/: CheckCompilerConfig.cmake  CompilerFlags.cmake  QEMUTargets.cmake  X86Toolchain.cmake
conf/: lab.mk
eth/: eth.c  eth.h  ne.c  ne.h
fs/: README  cat  clone  echo  grep  init  kill  ln  ls  mkdir  rm  sh  stressfs  tester  thread  usertests  wc  zombie
include/: amd64.h  apic.hh  arc4.hh  atomic.hh  atomic_2.h  atomic_base.h  atomic_std.h  atomic_util.hh  bits.hh  buf.hh  cilk.hh  compiler.h  condvar.h  cpputil.hh  cpu.hh  crange.hh  crange_arch.hh  dirit.hh  dirns.hh  distref.hh  elf.hh  errno.h  fcntl.h  file.hh  filetable.hh  fs.h  fstream.h  futex.h  gc.hh  hwvm.hh  ipc.hh  kalloc.h  kalloc.hh  kbd.h  kern_c.h  kernel.hh  kmtrace.hh  kstream.hh  lib.h  lockstat.h  (+44 more)
kernel/: Makefrag  acpi.cc  asmdefines.c  async.cc  bio.c  bio.cc  boot.S  bootdata.c  bootother.S  buf.h  cga.cc  cilk.cc  cmdline.cc  condvar.cc  console.c  console.cc  cpprt.cc  crange.cc  defs.h  distref.cc  e1000.cc  elf.h  entry.S  exec.c  exec.cc  fcntl.h  file.c  file.cc  file.h  fs.c  fs.cc  fs.h  futex.cc  gc.cc  hwvm.cc  hz.cc  idle.cc  incbin.S  initcode.S  ioapic.cc  (+66 more)
labs/: cow.html  fs.html  fs1.html  lazy.html  lock.html  mmap.html  syscall.html  xv6.html
lib/: Makefrag  crt.S  fmt.cc  fstream.cc  ipc.cc  perf.cc  printf.cc  pstream.cc  rt.c  stream.cc  threads.cc  ulib.c  umalloc.cc  usys.S  uthread.S  wq.cc  wqalloc.cc  wqlib.cc  wquser.cc
mkfs/: mkfs.c
net/: Makefrag  if.c  if.cc  lwipopts.h  net.c  net.h  string.h  sys_arch.c  sys_arch.cc
net/arch/: cc.h  perf.h  sys_arch.h
stdinc/: iterator  type_traits  utility
stdinc/sys/: mman.h
stdinc/uk/: mman.h
tests/: README
tests/host/: kvectortest.c  unitmock.h  unittests.h
tools/: Makefrag  mkfs.c  perf-report.cc  syscalls.py
unittests/: kvectortest.c  unitmock.h  unittests.h
user/: Makefrag.bench  Makefrag.usched  Makefrag.wq  alarmtest.c  cat.c  cow.c  cp.c  crange_arch.hh  dirit.hh  echo.c  forktest.c  greet.c  grep.c  grind.c  init.c  initcode.S  intelctr.hh  kill.c  ln.c  ls.c  mkdir.c  pingpong.c  primes.c  printf.c  rm.c  scopedperf.hh  sh.c  shutdown.c  sleep.c  stressfs.c  ulib.c  umain.cc  umalloc.c  usched.cc  user.h  user.ld  usertests.c  usys.pl  util.h  wc.c  (+5 more)
web/: Makefile  index.html  index.txt  l-bugs.html  l-coordination.html  l-fs.html  l-interrupt.html  l-lock.html  l-mkernel.html  l-name.html  l-okws.txt  l-plan9.html  l-scalablecoord.html  l-schedule.html  l-threads.html  l-vm.html  l-xfi.html  l1.html  l13.html  l14.txt  l19.txt  l2.html  l3.html  l4.html  l5.html  mkhtml  os-lab-1.ppt  os-lab-2.ppt  os-lab-3.ppt  x86-intr.html  x86-intro.html  x86-mmu.html  xv6-disk.html  xv6-intro.html  xv6-lock.html  xv6-names.html  xv6-sched.html  xv6-sleep.html
windows-debugging/: gdbcommand  options.xml
windows-debugging-templates/: gdbcommand  load-symbols  options.xml  readme.txt
